--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "",
   "dependencies": {
     "cloudinary": "^2.5.1",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
+    "express-handlebars": "^8.0.1",
     "multer": "^1.4.5-lts.1",
     "streamifier": "^0.1.1"
   }
