--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
     "multer": "^1.4.5-lts.1",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "strip-js": "^1.2.0"
   }
 }
