--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
     "builds": [
         {
         "src": "server.js",
-        "use": "@vercel/node",
-        "config": { "includeFiles": ["data/**"] }
+        "use": "@vercel/node"
         }
     ],
     "routes": [
