--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "client-sessions": "^0.8.0",
     "cloudinary": "^2.5.1",
     "express": "^4.21.1",
     "express-handlebars": "^8.0.1",
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.8.4",
     "multer": "^1.4.5-lts.1",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
