--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "client-sessions": "^0.8.0",
     "cloudinary": "^2.5.1",
     "express": "^4.21.1",
